<resources>
    <string name="app_name">Contacts</string>
    <string name="app_logo">App Logo</string>
    <string name="language">Language</string>
    <string name="welcome_description">We are excited to help you organize and easily stay in touch with your loved ones.</string>
    <string name="start_button_text">Welcome To Contacts App </string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_phone">Phone Number</string>
    <string name="action_button">Action</string>
    <string name="search_hint"> .  Search...</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="arabic">Arabic</string>
    <string name="choose_action">Choose </string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="contacts">Contacts</string>
</resources>
