<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ece6f4"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="25sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="32dp"
        android:gravity="center" />
    <!-- شعار التطبيق -->
    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/logo_contacts" />

    <TextView
        android:id="@+id/welcome_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_description"
        android:textSize="15sp"
        android:textColor="@android:color/black"
        android:layout_marginBottom="32dp"
        android:gravity="center" />

    <!-- زر التالي -->
    <Button
        android:id="@+id/next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button_text"
        android:textColor="#FFFFFF"
        android:backgroundTint="#000000"
        android:padding="20dp"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:drawableRight="@drawable/arroww"
        android:layout_margin="20dp"
        android:drawablePadding="10dp"
        />


</LinearLayout>
