<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ece6f4"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".MainActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="170dp"
    android:paddingHorizontal="23dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:orientation="horizontal"
        tools:ignore="ExtraText">
        <!-- العنوان -->
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/languageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:src="@drawable/language_solid"
            android:contentDescription="@string/language"
            android:background="?attr/selectableItemBackground"
            android:padding="8dp"
            app:tint="@color/black" />

    </LinearLayout>

        <EditText

            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:layout_gravity="center"
            android:background="@drawable/searchbackgroound"
            android:drawableStart="@drawable/magnifying_glass_solid"
            android:hint="@string/search_hint"
            android:padding="8dp"
            android:textColorHint="#DBD3D3" />


</LinearLayout>

<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/contact_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="8dp" />

</LinearLayout>

